# Cross-Platform-Engine-Development

./: .gitignore  README.md
Group-3-Engine/: Group-3-Engine.sln
Group-3-Engine/Group-3-Engine/: AIAgent.cpp  AIAgent.h  AIGridManager.cpp  AIGridManager.h  Animation.cpp  Animation.h  AnimatorComponent.cpp  AnimatorComponent.h  Application.cpp  Application.h  AudioComponent.cpp  AudioComponent.h  AudioFile.h  AudioManager.cpp  AudioManager.h  BTNode.cpp  BTNode.h  BTSelectorNode.cpp  BTSelectorNode.h  BTSequenceNode.cpp  BTSequenceNode.h  BaseComponent.cpp  BaseComponent.h  BehaviourTree.cpp  BehaviourTree.h  CMakeLists.txt  CameraComponent.cpp  CameraComponent.h  Collider.cpp  Collider.h  ColliderRenderComponent.cpp  ColliderRenderComponent.h  CollisionManager.cpp  CollisionManager.h  CompileTimeHash.h  ComponentBuffer.h  ComponentPtr.cpp  ComponentPtr.h  ConstantBuffer.h  Debug.h  (+110 more)
Group-3-Engine/Group-3-Engine-Android/: settings.gradle.kts
Group-3-Engine/Group-3-Engine-Android/app/: build.gradle.kts
Group-3-Engine/Group-3-Engine-Android/app/src/androidTest/java/com/example/group_3_engine_android/: ExampleInstrumentedTest.java
Group-3-Engine/Group-3-Engine-Android/app/src/main/: AndroidManifest.xml
Group-3-Engine/Group-3-Engine-Android/app/src/main/java/com/example/group_3_engine_android/: MainActivity.java  SurfaceView.java
Group-3-Engine/Group-3-Engine-Android/app/src/main/res/values/: strings.xml  themes.xml
Group-3-Engine/Group-3-Engine-Android/app/src/main/res/values-night/: themes.xml
Group-3-Engine/Group-3-Engine-Android/app/src/test/java/com/example/group_3_engine_android/: ExampleUnitTest.java
Group-3-Engine/Group-3-Engine-Android/gradle/wrapper/: gradle-wrapper.properties
Group-3-Engine/Group-3-Engine/assets/scenes/: Debug.json  FlappyCat.json  FlappyCatold.json  InputScene.json  Test Game.json  scene.json  scene2.json  tilemapcollisiontest.json
Group-3-Engine/Group-3-Engine/assets/shaders/: base-android.frag  base-android.vert  base.frag  base.vert  collider-android.frag  collider.frag  flash-android.frag  flash.frag  text-android.frag  text.frag
Group-3-Engine/Group-3-Engine/assets/tilemaps/: BigUpDownRoom.txt  BigUpRoom.txt  DOT2.txt  DownRoom.txt  ExampleRoom.txt  HorizontalCorridor.txt  LeftRightRoom.txt  LeftRoom.txt  ROOM.txt  RightRoom.txt  Temp.txt  UpDownRoom.txt  UpRightDownLeft.txt  UpRightDownRoom.txt  UpRoom.txt  VerticalCorridor.txt  cat.txt  cube.txt  dot.txt  jinx.txt  sheet.txt  sus.txt  testSceneTilemap.txt  tilemapEditorTest.txt  tilemapEditorTest2.txt  tilemapEditorTest3.txt
Group-3-Engine/Group-3-Engine/libraries/ImGUI/: fts_fuzzy_match.h  imgui_internal.h
Group-3-Engine/Group-3-Engine/libraries/ImGUI/not docking/: imgui_impl_android.cpp
Group-3-Engine/Group-3-Engine/libraries/cpptrace/include/: cpptrace.lib
Group-3-Engine/Group-3-Engine/libraries/glad/include/glad/: glad.h
Group-3-Engine/Group-3-Engine/libraries/glad/src/: glad.c
Group-3-Engine/PreBuild/: Program.cs
